# The-Embedinator

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  Makefile  README.md  SECURITY.md  clear  codecov.yml  docker-compose.dev.yml  docker-compose.gpu-amd.yml  docker-compose.gpu-intel.yml  docker-compose.gpu-nvidia.yml  docker-compose.prod.yml  docker-compose.yml  embedinator.ps1  embedinator.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _ci-core.yml  ci-cli.yml  ci-rust.yml  ci.yml  docker-publish.yml  pr-title.yml  release-cli.yml  release.yml  security.yml
.serena/: project.yml
.specify/memory/: constitution.md
Docs/: DESIGN-019-CROSS-PLATFORM-DX.md  DEVELOPMENT-STATUS.md  DEVOPS-INFRASTRUCTURE-DESIGN.md  REFLECTION-COMPETITIVE-ANALYSIS.md
Docs/PROMPTS/: workflow.txt
Docs/Project Blueprints/: api-reference.md  changelog.md  contributing.md  data-model.md  performance-budget.md  prd.md  runbook.md  security-model.md  testing-strategy.md
Docs/Setups/: tmux.md
Docs/Tests/: contracts-validation-report.md  spec12-a1-audit.md  spec12-final-report.md  spec14-a1-audit.md  spec14-a4-final.md
SPECS/001-vision-arch/: spec.md
SPECS/spec-01-vision/: 01-plan.md  (+1 more)
backend/: README.md  _demo_lint_regression.py  _demo_type_error.py  _demo_uncovered.py  _demo_unformatted.py  config.py  errors.py  main.py  middleware.py
claudedocs/: architecture-design.md  rag-analysis-report.md
cli/: .gitignore  .golangci.yml  .goreleaser.yml  go.mod  go.sum
docs/: DEVELOPMENT-STATUS.md  MCP_REFERENCE.md  _demo_trailing_whitespace.txt  api-reference.md  architecture-design.md  bug-registry-spec26.md  cicd.md  data-model.md  design-launcher-improvements.md  design-tui-installer-v2.md  design-tui-installer.md  guided-hybrid-e2e-loop.md  performance.md  prd.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
ingestion-worker/: Cargo.toml  README.md
ingestion-worker/src/: code.rs  heading_tracker.rs  main.rs  markdown.rs  pdf.rs  text.rs  types.rs
scripts/: README.md  benchmark.py  dev-rebuild-backend.sh  multi_sample_sweep.py  run-test-external.txt  run-tests-external.sh  seed_data.py  smoke_test.py  validate-bug-records.sh
specs/: README.md
tests/: README.md  conftest.py  mocks.py
(+867 files in other folders)
