[package]
name = "embedinator-worker"
version = "0.1.0"
edition = "2021"
description = "High-performance document parsing worker for The Embedinator"

[[bin]]
name = "embedinator-worker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
pdf-extract = "0.10"
clap = { version = "4", features = ["derive"] }
regex = "1"
